Font colors changed

--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
       <header>
 
       </header>
-      <div id="column-1" class="col-3"></div>
-      <div id="column-2" class="col-3"></div>
-      <div id="column-3" class="col-3"></div>
+      <div id="column-1" class="col-3">
+        <h1>This is the main heading</h1>
+      </div>
+      <div id="column-2" class="col-3">
+        <h2>This is the sub-heading</h2>
+      </div>
+      <div id="column-3" class="col-3">
+        <p>These are all the paragraphs...</p>
+        <p> More paragraphs .....</p>
+      </div>
 
 
       <div class="clear"></div>
